--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header class="text-center mb-8">
         <nav class="mt-4 space-x-4">
           <a href="#" class="bg-white text-[#b5413c] font-semibold px-4 py-2 rounded-full hover:bg-rose-200 transition">Inicio</a>
-          <a href="Catálogo.html" class="hover:underline">Catálogo</a>
+          <a href="catalogo.html" class="hover:underline">Catálogo</a>
           <a href="https://wa.me/943387129" target="_blank" class="hover:underline">Contacto</a>
         </nav>
       </header>
