--- a/catalogo.html
+++ b/catalogo.html
@@ -19,7 +19,7 @@
     <header class="text-center mb-10">
       <h1 class="text-4xl font-bold">Catálogo de Cartas</h1>
       <nav class="mt-4 space-x-4">
-        <a href="Inicio.html" class="hover:underline">Inicio</a>
+        <a href="index.html" class="hover:underline">Inicio</a>
         <a href="#" class="bg-white text-[#b5413c] font-semibold px-4 py-2 rounded-full hover:bg-rose-200 transition">Catálogo</a>
         <a href="https://wa.me/943387129" target="_blank" class="hover:underline">Contacto</a>
       </nav>
